discussion/kv_engine/148719/148719_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

stats: Add WriteCacheflush wait and execute histograms

Change-Id: I04a41ef6d8069bcf92e91c1883c8def107acea3f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-03-16 17:52:29.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-16 18:15:19.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29429/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29429/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34282/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2559): error C2039: "GetHistograms": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34282/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7701/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25: error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
    auto histo = magma->GetHistograms();
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7701/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25:
error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7701/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8319/ : FAILURE

Compile error at [2021-03-16T17:56:49.340Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8319/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9403/ : FAILURE

Compile error at [2021-03-16T18:04:23.550Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25:
error: ?class magma::Magma? has no member named ?GetHistograms?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9403/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9612/ : FAILURE

Compile error at [2021-03-16T18:07:49.958Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2559:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9612/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17166/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6242/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9257/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
